			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02j: *********************************

BUG: (04/01/05, RK) regressions: I removed Compaction regression from run.sh because that regression always fails

IMP: (04/01/05, RK) NCC: added regression test for multiple hierarchy scan

BUG: (04/01/05, RK) NCC: CompareList must always have something from both designs

BUG: (03/31/05, GVG) Class exception while dragging cells from ExplorerTree into EditWindow on Mac (Bug #235)
FIX: DataFlavor constructor changed. Now using DataFlavor(MyClass.class, String)

BUG: (03/31/05, GVG) Exception in Explorer while dragging on whitespace on Mac OS X (Bug #232)
FIX: add image to DragSource.startDrag (only for Mac)

IMP: (03/31/05, GVG) Improvements in lights, transparency/Z buffer handling after discussion with Java3D team.

BUG: (03/31/05, GVG) Cell expansion with several sublevels was not working.
FIX: Using rotateOutAboutTrueCenter instead of rotateOut

BUG: (03/31/05, GVG) Exception in output.JELIB if var == null and we are testing var.isParam();
FIX: var != null added

IMP: (03/30/05, SMR) Duplicating or copying arcs that share names keeps the sharing (Bug #190).

IMP: (03/30/05, GVG) Ability to change color in 3D background.

FIX: (03/30/05, JKG) fix situation where attribute on instance with same name of parameter
    on contents view would incorrectly not be marked as a parameter.

FIX: (03/30/05, JKG) TextUtils.formatDouble() made thread safe

IMP: (03/30/05, JKG) Added checking for conflicting logical effort parameters in designs

IMP: (03/30/05, SMR) Placing a large cell instance in an empty window zooms the window to fit (Bug #214).

BUG: (03/30/05, SMR) Shift-Right-click to zoom will zoom out if the area is too small (Bug #27).
FIX: In ClickZoomWireListener.mouseReleased(), use smarter determination of a point-click.
