@@ -4,11 +4,19 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.02j: *********************************
 
-BUG: (04/01/05, RK) regressions: I removed Compaction regression from run.sh because that regression always fails
+IMP: (04/04/05, DN) Method "TextDescriptor.setParam" removed because
+   TextDescriptor is intended to become immutable.
 
-IMP: (04/01/05, RK) NCC: added regression test for multiple hierarchy scan
+BUG: (04/04/05, DN) When a circular library dependency forbids a new
+    instance to be created, it corrupts the database (Bug #237)
+FIX: On failure Cell.addNode returns -1 now, which prevents
+    NodeInst.lowLevelLink from linking.
 
-BUG: (04/01/05, RK) NCC: CompareList must always have something from both designs
+BUG: (04/04/05, RK) regressions: I removed Compaction regression from run.sh because that regression always fails
+
+IMP: (04/04/05, RK) NCC: added regression test for multiple hierarchy scan
+
+BUG: (04/04/05, RK) NCC: CompareList must always have something from both designs
 
 BUG: (03/31/05, GVG) Class exception while dragging cells from ExplorerTree into EditWindow on Mac (Bug #235)
 FIX: DataFlavor constructor changed. Now using DataFlavor(MyClass.class, String)
